movie-catalog-stackdriver-istio-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: movie-catalog
  name: movie-catalog
  namespace: default
spec:
  replicas: 1 #CHANGE
  minReadySeconds: 45
  selector:
    matchLabels:
      app: movie-catalog
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: movie-catalog
    spec:
      containers:
      - image: agilerules/movie-catalog:2.0.0-RELEASE #CHANGE
        imagePullPolicy: Always #CHANGE
        name: movie-catalog
        env: #CHANGE
        - name: MOVIE_RATING_URI
          value: http://movie-rating
        - name: MOVIE_INFO_URI
          value: http://movie-info
        - name: SPRING_CLOUD_GCP_TRACE_ENABLED
          value: "true" 
        - name: JAEGER_SERVICE_NAME #CHANGE
          value: currency-exchange
        - name: JAEGER_AGENT_HOST
          value: jaeger-agent.istio-system.svc.cluster.local
        - name: JAEGER_REPORTER_LOG_SPANS
          value: "true"
        - name: JAEGER_SAMPLER_TYPE
          value: const
        - name: JAEGER_SAMPLER_PARAM
          value: "1"
        - name: JAEGER_PROPAGATION
          value: b3       
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels: #PODS
    app: movie-catalog
  name: movie-catalog
  namespace: default
spec:
  ports:
  - # nodePort: 30702 #CHANGE
    port: 8081 #CHANGE
    protocol: TCP
    targetPort: 8081 #CHANGE
  selector:
    app: movie-catalog
  sessionAffinity: None #CHANGE
  #type: LoadBalancer
